2007-10-30  Maximilien Cuony
    * Fixed problem with < in mail signed (gmail interface)
    * Add warning if a text seem to be already crypted or signed.
    * BEGIN PGP SIGNATURE supported
    * On Unix system, try to use /usr/local/bin/gpg (for MacOs users)

2007-10-29  Maximilien Cuony
	* 0.4.4 packed, and uploaded to the server !

2007-10-10  Maximilien Cuony
	* Add version number in options
	* Fixed a probable bug in update system.

2007-10-09  Maximilien Cuony
	* Sorting key's list by name

2007-08-11 Achraf cherti
	* The classes GPGLin and GPGWin are unified in GPGAccess.
	* some warnings are fixed.
	* AUTHORS file updated

2007-08-06  Maximilien Cuony
	* 0.4.3 packed, and uploaded to the server !
	* All locales updated

2007-08-05  Maximilien Cuony
	* Sign + enrypt support.
	* Added sign & enrypt to menu, editor, cgpg and cgpglin. [Todo: cgmail and cwin]

2007-07-08  Maximilien Cuony
	* Added more information when select a key (id, dates (created, expire))
	* Information about the firefox restart nedded when the gpg's path is edited.
	* Add feature to add some option to gpg's command line

2007-07-01  Maximilien Cuony
	* Option to disable auto-update

2007-06-24  Maximilien Cuony
	* 0.4.2.1 repacked, and uploaded to the server !
	* Apply diff of 22/06 for gpgAuth
	* Implement getContentXhttp
	* getMimeMailContens finished !

2007-06-21  Maximilien Cuony
	* 0.4.2.1 packed, and uploaded to the server !
	* First implementation of gpgAuth.
	* Fix problem with pl locale.
	* pl, tr, de, pt, updated
	* ca added

2007-06-19  Maximilien Cuony
	* 0.4.2 packed, and uploaded to the server !
	* it, zh-CN, zh-TW, tr, pt_BR updated
	* New locale : ko-KR
	* Updated locales

2007-06-18  Maximilien Cuony
	* Fixed a bug with cygwin on windows (thanks to Kevin Hilton and Marco Bonetti for report and help)

2007-06-17  Maximilien Cuony
	* Can get the mime content of a mail (need implemantation now, but work with a simple alert)